Bug 499843 - Game list is invisible with QT_QUICK_BACKEND=software
Summary: Game list is invisible with QT_QUICK_BACKEND=software
Status: RESOLVED FIXED
Alias: None
Product: gcompris
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Jazeix Johnny
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-11 21:53 UTC by Balló György
Modified: 2025-02-12 17:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Application window with invisible game list (168.39 KB, image/png)
2025-02-11 21:53 UTC, Balló György
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Balló György 2025-02-11 21:53:11 UTC
Created attachment 178165 [details]
Application window with invisible game list

SUMMARY
When I launch GCompris using the software Qt Quick renderer, the list of game cards are invisible. I could still click on them and launch the games, but I couldn't see which game was clicked on the list. (See the attached screenshot.)

STEPS TO REPRODUCE
1. Launch GCompris with command: QT_QUICK_BACKEND=software gcompris-qt
2. Choose one main category.

OBSERVED RESULT
Game cards are invisible on the list, nothing is shown above the background image.

EXPECTED RESULT
Game cards should be visible on the list.

SOFTWARE/OS VERSIONS
Distribution: Arch Linux 
GCompris Version: 25.0
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2
Comment 1 animtim 2025-02-12 07:59:34 UTC
Hi,
Yes, we have our own command-line option to select software renderer which is needed to render properly.
So you can just launch it with:

gcompris-qt --renderer software

and it should work.
Comment 2 Bug Janitor Service 2025-02-12 12:08:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/gcompris/-/merge_requests/242
Comment 3 Balló György 2025-02-12 12:21:28 UTC
> gcompris-qt --renderer software

Yes, if this command-line option is specified, everything is rendered properly.

I created a merge request which ensures this also when the accelerated rendering is disabled or unavailable on the system:
https://invent.kde.org/education/gcompris/-/merge_requests/242
Comment 4 Jazeix Johnny 2025-02-12 17:11:15 UTC
Git commit 3f1f7462090a11fd89ab889bc7b0b78bd5a341a1 by Johnny Jazeix, on behalf of Balló György.
Committed on 12/02/2025 at 17:11.
Pushed by jjazeix into branch 'master'.

core, fallback to software renderer if needed

If the accelerated rendering is disabled or unavailable on the system,
fallback to software renderer:

- If OpenGL context cannot be created.

- If the value of the Scene Graph backend is "`software`". It needs to be
checked after the first `QQuickWindow` is constructed.

M  +13   -1    src/core/main.cpp

https://invent.kde.org/education/gcompris/-/commit/3f1f7462090a11fd89ab889bc7b0b78bd5a341a1
Comment 5 Jazeix Johnny 2025-02-12 17:57:25 UTC
Git commit ceacd234a77b6a9a22be0b9eb8f68a58360a88fd by Johnny Jazeix, on behalf of Balló György.
Committed on 12/02/2025 at 17:56.
Pushed by jjazeix into branch 'KDE/25.0'.

core, fallback to software renderer if needed

If the accelerated rendering is disabled or unavailable on the system,
fallback to software renderer:

- If OpenGL context cannot be created.

- If the value of the Scene Graph backend is "`software`". It needs to be
checked after the first `QQuickWindow` is constructed.

M  +13   -1    src/core/main.cpp

https://invent.kde.org/education/gcompris/-/commit/ceacd234a77b6a9a22be0b9eb8f68a58360a88fd