core, fallback to software renderer if needed

If the accelerated rendering is disabled or unavailable on the system,
fallback to software renderer:

- If OpenGL context cannot be created.

- If the value of the Scene Graph backend is "`software`". It needs to be
checked after the first `QQuickWindow` is constructed.

BUG: 499843